--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
 
 
-<h1 class="jumbotron">main</h1>
+<app-navbar></app-navbar>
 
-<h1 class="text-danger">dsd</h1>
+<div class="row">
+
+  <div class="container">
+
+    <router-outlet></router-outlet>
+
+  </div>
+
+</div>
+
+<app-footer></app-footer>
 
 
