--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="bg-dark">
+	<p class="text-light text-center">Desarrollado por Jonathan Castro</p>
+	
+</footer>
+
