--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<br>
+<div class="col-6 offset-3">
+
+	<h1>Login</h1>
+	<hr>
+
+	<form action="register_submit" method="post" accept-charet="utf-8">
+
+		<div>			
+			<input type="text" class="form-control" name="email" placeholder="email">
+			<br>
+			<input type="password" class="form-control" name="password" placeholder="password">
+			<br>
+			<button class="btn btn-primary" type="submit">Send</button>
+
+		</div>
+
+	</form>
+
+</div>
+<br>
+<br>
+
