--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,28 @@
-<p>register works!</p>
+<br>
+<br>
+<div class="col-6 offset-3">
+
+	<h1>Register</h1>
+	<hr>
+
+	<form action="register_submit" method="post" accept-charet="utf-8">
+
+		<div>
+			<input type="text" class="form-control" name="first_name" placeholder="first name">
+			<br>
+			<input type="text" class="form-control" name="last_name" placeholder="last name">
+			<br>
+			<input type="text" class="form-control" name="email" placeholder="email">
+			<br>
+			<input type="password" class="form-control" name="password" placeholder="password">
+			<br>
+			<button class="btn btn-primary" type="submit">Send</button>
+
+		</div>
+
+	</form>
+
+</div>
+<br>
+<br>
+
